<resources>
    <string name="app_name">Кекс</string>

    <string name="vanilla">Ванильный</string>
    <string name="chocolate">Шоколадный</string>
    <string name="red_velvet">Красный бархат</string>
    <string name="salted_caramel">Соленая карамель</string>
    <string name="coffee">Кофейный</string>

    <string name="subtotal_price">Подытог %s</string>
    <string name="total_price">Итого %s</string>

    <!--    кнопки-->
    <string name="next">Дальше</string>
    <string name="cancel">Отменить</string>

    <string name="choose_flavor">Выбор вкуса</string>
    <string name="choose_pickup_date">Выбор даты</string>
    <string name="order_summary">Итоговый заказ</string>

    <string name="quantity">Количество</string>
    <string name="flavor">Вкус</string>
    <string name="pickup_date">Дата выдачи</string>
    <string name="send">Выбрать способ отправки</string>

    <string name="enter_quantity">Введите количество</string>
    <string name="try_again">Ноль кексов заказать нельзя! )))</string>


    <plurals name="cupcakes">
        <item quantity="one">%d кекс</item>
        <item quantity="other">%d кексa(ов)</item>
    </plurals>

    <string name="new_cupcake_order">Новый заказ</string>
    <string name="order_details">
        Кол-во: %1$s\n
        Вкус: %2$s \n
        Дата выдачи: %3$s \n
        Итого: %4$s \n\n
        Спасибо!</string>
    <string name="choose_quickly">Быстрый выбор</string>
    <string name="make_order">Заказать</string>
    <string name="order_a_cupcake">Закажи КЕКС!</string>
    <!--    <string-array name="emails">-->
<!--        <item>bklist@mail.ru</item>-->
<!--    </string-array>-->





</resources>