<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.cupcake1.model.OrderViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".FlavorFragment">

            <RadioGroup
                android:id="@+id/flavor_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/side_margin">

                <RadioButton
                    android:id="@+id/vanilla"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vanilla"
                    android:onClick="@{() -> viewModel.setFlavor(@string/vanilla)}"
                    android:checked="@{viewModel.flavor.equals(@string/vanilla)}"/>

                <RadioButton
                    android:id="@+id/chocolate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.setFlavor(@string/chocolate)}"
                    android:checked="@{viewModel.flavor.equals(@string/chocolate)}"
                    android:text="@string/chocolate" />

                <RadioButton
                    android:id="@+id/red_velvet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.setFlavor(@string/red_velvet)}"
                    android:checked="@{viewModel.flavor.equals(@string/red_velvet)}"
                    android:text="@string/red_velvet" />

                <RadioButton
                    android:id="@+id/salted_caramel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.setFlavor(@string/salted_caramel)}"
                    android:checked="@{viewModel.flavor.equals(@string/salted_caramel)}"
                    android:text="@string/salted_caramel" />

                <RadioButton
                    android:id="@+id/coffee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coffee" />
            </RadioGroup>

            <View
                android:id="@+id/divider"
                style="@style/Widget.Cupcake1.Divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin" />

            <TextView
                android:id="@+id/subtotal"
                style="@style/Widget.Cupcake1.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:layout_marginEnd="@dimen/side_margin"
                android:text="Подытог ₽5.00"
                android:textAlignment="viewEnd"
                tools:text="Подытог ₽5.00" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin ="@dimen/side_margin"
                    android:text="@string/cancel"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/next_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin ="@dimen/side_margin"
                    android:text="@string/next"
                    android:layout_weight="1"/>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</layout>







































